Search for multiple songs by a single theme works